--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -37,6 +37,7 @@ basicts:site.ycsb.BasicTSDB
 cassandra-cql:site.ycsb.db.CassandraCQLClient
 cassandra2-cql:site.ycsb.db.CassandraCQLClient
 cloudspanner:site.ycsb.db.cloudspanner.CloudSpannerClient
+consensus:site.ycsb.db.ConsensusKVClient
 couchbase:site.ycsb.db.CouchbaseClient
 couchbase2:site.ycsb.db.couchbase2.Couchbase2Client
 crail:site.ycsb.db.crail.CrailClient
