--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -71,6 +71,11 @@ LICENSE file.
     </dependency>
     <dependency>
       <groupId>site.ycsb</groupId>
+      <artifactId>consensus-binding</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>site.ycsb</groupId>
       <artifactId>couchbase-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
