--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@ LICENSE file.
     <azurestorage.version>4.0.0</azurestorage.version>
     <cassandra.cql.version>3.0.0</cassandra.cql.version>
     <cloudspanner.version>2.0.1</cloudspanner.version>
+    <consensus.version>1.0-SNAPSHOT</consensus.version>
     <couchbase.version>1.4.10</couchbase.version>
 		<couchbase2.version>2.3.1</couchbase2.version>
 		<crail.version>1.1-incubating</crail.version>
@@ -166,6 +167,7 @@ LICENSE file.
     <module>azuretablestorage</module>
     <module>cassandra</module>
     <module>cloudspanner</module>
+    <module>consensus</module>
     <module>couchbase</module>
 		<module>couchbase2</module>
 		<module>crail</module>
