--- a/consensus/pom.xml
+++ b/consensus/pom.xml
@@ -25,7 +25,7 @@
   <dependencies>
     <dependency>
       <groupId>com.mboysan.consensus</groupId>
-      <artifactId>consensus-distribution</artifactId>
+      <artifactId>consensus-kvstore</artifactId>
       <version>${consensus.version}</version>
     </dependency>
     <dependency>
@@ -36,11 +36,6 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.36</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
       <version>1.7.36</version>
     </dependency>
   </dependencies>
