--- a/consensus/pom.xml
+++ b/consensus/pom.xml
@@ -25,7 +25,7 @@
   <dependencies>
     <dependency>
       <groupId>com.mboysan.consensus</groupId>
-      <artifactId>consensus-kvstore</artifactId>
+      <artifactId>consensus-distribution</artifactId>
       <version>${consensus.version}</version>
     </dependency>
     <dependency>
