THESIS-T-24: an attempt to add atomix bindings. - Not managed to get it working yet.

--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -30,6 +30,7 @@ aerospike:site.ycsb.db.AerospikeClient
 asynchbase:site.ycsb.db.AsyncHBaseClient
 arangodb:site.ycsb.db.arangodb.ArangoDBClient
 arangodb3:site.ycsb.db.arangodb.ArangoDBClient
+atomix:site.ycsb.db.arangodb.AtomixKVClient
 azurecosmos:site.ycsb.db.AzureCosmosClient
 azuretablestorage:site.ycsb.db.azuretablestorage.AzureClient
 basic:site.ycsb.BasicDB
