--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@ LICENSE file.
     <module>aerospike</module>
     <module>arangodb</module>
     <module>asynchbase</module>
+    <module>atomix</module>
     <module>azurecosmos</module>
     <module>azuretablestorage</module>
     <module>cassandra</module>
