THESIS-T-34 : completed etcd KV store client binding. - added integration tests - added binaries for runtime

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -44,6 +44,11 @@ LICENSE file.
       <artifactId>consensus-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>site.ycsb</groupId>
+      <artifactId>etcd-binding</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
