--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@ LICENSE file.
     <module>dynamodb</module>
     <module>elasticsearch</module>
     <module>elasticsearch5</module>
+    <module>etcd</module>
     <module>foundationdb</module>
     <module>geode</module>
     <module>googlebigtable</module>
