THESIS-T-34: etcd client configuration adjustments.

--- a/etcd/conf/application.properties
+++ b/etcd/conf/application.properties
@@ -1,1 +1,5 @@
-cluster.members=infra0-http://localhost:9990,infra1-http://localhost:9991,infra2-http://localhost:9992
+# use all members as the cluster members:
+#cluster.members=infra0=http://localhost:9990,infra1=http://localhost:9991,infra2=http://localhost:9992
+
+# use only 1 member as the cluster members:
+cluster.members=infra0=http://localhost:9990
