THESIS-T-34: fix etcd integration tests - consensus-cli dependency instead of consensus-distribution. - better logging dependencies.

--- a/consensus/pom.xml
+++ b/consensus/pom.xml
@@ -25,7 +25,7 @@
   <dependencies>
     <dependency>
       <groupId>com.mboysan.consensus</groupId>
-      <artifactId>consensus-distribution</artifactId>
+      <artifactId>consensus-cli</artifactId>
       <version>${consensus.version}</version>
     </dependency>
     <dependency>
