--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Build and release
         env:
+          # This is the secret for mvn-repo repository which is fetched from https://github.com/settings/tokens
+          # Once rotated, make sure you also update the secret value in the repository settings.
+          # (i.e. goto repository -> settings/secrets/actions and edit MVN_REPO_KEY)
           MVN_REPO_KEY: ${{ secrets.MVN_REPO_KEY }}
           BUILD_NUMBER: ${{github.run_number}}
         run: |
