THESIS-T-101: add consul bindings

--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -26,4 +26,5 @@
 #   use a dash with the version.  (e.g. cassandra-7, cassandra-cql)
 #
 consensus:site.ycsb.db.ConsensusKVClient
+consul:site.ycsb.db.ConsulKVClient
 etcd:site.ycsb.db.EtcdKVClient
