--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -46,6 +46,11 @@ LICENSE file.
     </dependency>
     <dependency>
       <groupId>site.ycsb</groupId>
+      <artifactId>consul-binding</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>site.ycsb</groupId>
       <artifactId>etcd-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
