--- a/consensus/conf/application.properties
+++ b/consensus/conf/application.properties
@@ -10,4 +10,4 @@
 #transport.tcp.clientPoolSize=-1
 
 # destinations for the tcp transport.
-transport.tcp.destinations=0-127.0.0.1:33340
+transport.tcp.destinations=0-localhost:33340
